# wifikit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
.planning/: channel-aware-scanning.md  driver_mt7921au_roadmap.md  driver_rtl8812au_roadmap.md  driver_rtl8812bu_roadmap.md  driver_rtl8852au_roadmap.md  spectrum-cli-integration.md
docs/: oui.csv  oui36.csv  ui-design-spec.md  ui-redesign-implementation.md
firmware-tools/: main.py  pyproject.toml
scripts/: convert_8852a_tables.py  convert_phase.py.bkp  extract_8852bu_pcap.py  gen_driver.py  modeswitch_rtl.py  parse_pcap.py  pcap_to_init_rs.py  setup_8852au.sh  setup_8852bu.sh  usb3_switch.rs
scripts/modeswitch/: Cargo.toml
src/: lib.rs  main.rs
src/adapter/: mod.rs  shared.rs
src/attacks/: ap.rs  csa.rs  dos.rs  eap.rs  frag.rs  fuzz.rs  krack.rs  mod.rs  pmkid.rs  wpa3.rs  wps.rs
src/chips/: mod.rs  mt7612u.rs  mt7921au.rs  rt3572.rs  rtl8812a_fw.rs  rtl8812a_tables.rs  rtl8812au.rs  rtl8812bu.rs  rtl8822b_tables.rs  rtl8852a_channel_switch.rs  rtl8852a_full_init.rs  rtl8852a_phase_ch1.rs  rtl8852a_phase_ch11_2g.rs  rtl8852a_phase_ch149_5g.rs  rtl8852a_phase_ch165_5g.rs  rtl8852a_phase_ch36_5g.rs  rtl8852a_phase_ch48_5g.rs  rtl8852a_phase_ch6_2g.rs  rtl8852a_phase_inter_fwdl.rs  rtl8852a_phase_monitor.rs  rtl8852a_phase_post_fwdl.rs  rtl8852a_phase_pre_fwdl.rs  rtl8852a_phase_rxtx.rs  rtl8852a_phase_txpower.rs  rtl8852a_post_boot.rs  rtl8852a_pre_fwdl.rs  rtl8852a_tables.rs  rtl8852au.rs  rtl8852bu.rs
src/cli/: app.rs  banner.rs  mod.rs  module.rs
(+73 files in other folders)
