[package]
name = "wifikit"
version = "0.2.0"
edition = "2024"
description = "WiFi pentesting toolkit for macOS and Linux*"
license = "MIT"

[dependencies]
rusb = "0.9"
rusb-async = "0.0.1-alpha"
thiserror = "2"
crossterm = "0.28"
unicode-width = "0.2"
prism = { package = "rlabs-prism", version = "0.1" }

# Crypto (RustCrypto family — pure Rust, no system deps)
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
bitflags = "2"
libc = "0.2"
getrandom = "0.2"
